Actions
Bug #3910
closedt_look(3NSL) should never return T_ERROR
Start date:
2013-07-25
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
needs-triage
Gerrit CR:
External Bug:
Description
T_ERROR is undocumented, ancient, and buggy.
T_ERROR should be completely removed from TLI.
Updated by Gary Mills almost 9 years ago
- Status changed from New to Feedback
- Assignee set to Gary Mills
This doesn't seem too bad. The change only alters the style of one error return from the t_look() TLI function. The effects are not widespread. Most callers already handle both styles.
In addition to the commands that call t_look(), there is a kernel TLI-like function that can return type=T_ERROR . Fortunately, it has only two callers in the illumos kernel.
Testing is going to be the difficult part.
Updated by Gary Mills almost 9 years ago
- Status changed from Feedback to In Progress
- % Done changed from 0 to 100
I've just submitted an RTI for this bug.
Updated by Electric Monk almost 9 years ago
- Status changed from In Progress to Closed
git commit 09b0d01c5bc323b8ee7043100e09aded27cc12ab
commit 09b0d01c5bc323b8ee7043100e09aded27cc12ab Author: Gary Mills <gary_mills@fastmail.fm> Date: 2014-06-17T19:30:28.000Z 3910 t_look(3NSL) should never return T_ERROR Reviewed by: Marcel Telka <marcel@telka.sk> Reviewed by: Richard Lowe <richlowe@richlowe.net> Approved by: Dan McDonald <danmcd@omniti.com>
Actions