3910 t_look(3NSL) should never return T_ERROR Reviewed by: Marcel Telka <marcel@telka.sk> Reviewed by: Richard Lowe <richlowe@richlowe.net> Approved by: Dan McDonald <danmcd@omniti.com>